content/v1/3.usage/4.drawing.md
# Drawing

Drawing is an important part of any game. In GM-I18n, you can draw the translated text using the [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function. It's a wrapper for the `draw_text_*` functions with convenient additional features, so you can use it just like the `draw_text_*` functions.

---

## Drawing Presets

Drawing presets are a way to store the drawing configuration so you can use it later. It's optional to use the drawing presets, but it's recommended to use it if you want to draw the translated text consistently.

Before we're creating the drawing presets, you need to create the font assets first. See the [Configuration](/v1/getting-started/setup#using-font-assets) section for more information.

You done creating the font assets? Great! Let's familiarize ourselves with the constructor and most used functions for managing the drawing presets!

### Constructor

#### I18nDrawings

##### Syntax

```js 
I18nDrawings([draw_font], [draw_halign], [draw_valign], [draw_color], [draw_scale], [draw_rotation], [draw_alpha], [text_sep], [text_width], [is_template])
```

##### Description

> A constructor for creating a drawing preset. All parameters are optional.

##### Parameters

| Name          | Type              | Default      | Description |
|---------------|-------------------|--------------|-------------|
| draw_font     | Font Asset \| String        | `undefined`  | The font to use in `draw_set_font()` function. If a string is provided, it will be converted to an asset index. |
| draw_halign   | HAlign            | `undefined`  | The horizontal alignment to use in `draw_set_halign()` function. |
| draw_valign   | VAlign            | `undefined`  | The vertical alignment to use in `draw_set_valign()` function. |
| draw_color    | Color \| Color\[] | `undefined`  | The color to use in `draw_set_color()` function, or the color gradient to use in `draw_text*_color()` function. |
| draw_scale    | Real              | `undefined`  | The both scale (`x_scale` and `y_scale`) of the **text**. |
| draw_rotation | Real              | `undefined`  | The angle (`rotation`) of the **text**. |
| draw_alpha    | Real              | `undefined`  | The opacity (`alpha`) of the **text**. |
| text_sep      | Real              | `-1`         | The distance between each line (`sep`) of the **text**. |
| text_width    | Real              | `room_width` | The maximum width (`w`) of the text. |
| is_template   | Boolean           | `false`      | Whether the drawing preset is a template or not. |

##### Returns

> [`I18nDrawings`](/v1/api-reference/constructors#i18ndrawings)

##### Examples

```js 
// only for explanation purpose, DON'T copy-paste this code
// title
I18nDrawings(fnNotoSans, fa_center, fa_middle, #FFFFFF, 1.2, 0, 1);

// header
I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1);

// body
I18nDrawings(fnNotoSans, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, 32, 700);

// with other font
I18nDrawings(fnRoboto, fa_right, fa_bottom, #999999, 0.7, 0, 1, -1, 700);

// font asset created from code
I18nDrawings(global.font_ja, fa_left, fa_middle, #FFFFFF, 1, 0, 1);
```

### Functions

#### i18n_add_drawings

##### Syntax

```js
i18n_add_drawings(locale, preset_name, data, [use_ref], [i18n]);
```

##### Description

> Add one or more drawing preset to the selected locale(s).

##### Parameters

| Name        | Type              | Default      | Description |
|-------------|-------------------|--------------|-------------|
| locale      | String \| String\[] |              | The locale code to add the drawing preset(s). You can pass a string for single locale, or an array of string for multiple locales. |
| preset_name | String \| String\[] |              | The name of the drawing preset(s). You can pass a string for single preset, or an array of string for multiple presets. |
| data        | I18nDrawings \| I18nDrawings\[] |  | The drawing preset data. You can pass a single [`I18nDrawings`](/v1/api-reference/constructors#i18ndrawings) struct for single preset, or an array of [`I18nDrawings`](/v1/api-reference/constructors#i18ndrawings) struct for multiple presets. |
| use_ref     | Boolean           | `true`       | Use the first I18nDrawings struct as a reference, instead of creating a new one. Only works if the `locale` parameter is an array. Recommended to be `true` if you want to use the same drawing preset for multiple locales. |
| i18n        | Boolean \| I18n | `false`      | The [`I18n`](/v1/api-reference/functions/i18n-create) struct reference, or leave it empty to use the `global` i18n struct. |

##### Returns

> `Void`

##### Examples

```js [Create Event]
// add "header" drawing preset to "en" locale
i18n_add_drawings("en", "header", 
    new I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1)
);

// add "header" drawing preset to "en" and "id" locales
i18n_add_drawings(["en", "id"], "header", [
    new I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1)
]);

// same, but the "en" and "id" won't have the same struct reference
// only use this if you want to modify the drawing preset for each locale
// otherwise, keep the `use_ref` to `true`
i18n_add_drawings(["en", "id"], "header", [
    new I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1)
], false);

// add "header" and "body" drawing presets to "ja" locale
i18n_add_drawings("ja", ["header", "body"], [
    new I18nDrawings(global.font_ja, fa_left, fa_middle, #FFFFFF, 1, 0, 1),
    new I18nDrawings(global.font_ja, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, -1, 700)
]);

// add "title", "header", and "body" drawing presets to "en", "id", "my", and "fr" locales
// you're recommended to use this method if you want to use the same drawing preset for multiple locales
// the drawing presets only created once in "en" locale, and the rest of the locale will just reference the "en" locale
i18n_add_drawings(["en", "id", "my", "fr"], ["title", "header", "body"], [
    new I18nDrawings(fnNotoSans, fa_center, fa_middle, #FFFFFF, 1.2, 0, 1),
    new I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1),
    new I18nDrawings(fnNotoSans, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, -1, 700)
]);
```

#### i18n_use_drawing

##### Syntax

```js
i18n_use_drawing(preset_name, [locale], [i18n]);
```

##### Description

> Use a drawing preset for the selected locale.

##### Parameters

| Name        | Type              | Default      | Description |
|-------------|-------------------|--------------|-------------|
| preset_name | String            |              | The name of the drawing preset to use. |
| locale      | String            | `""`         | The locale code to use the drawing preset. Leave it empty to mark it as `dynamic` locale. |
| i18n        | Boolean \| I18n | `false`      | The [`I18n`](/v1/api-reference/functions/i18n-create) struct reference, or leave it empty to use the `global` i18n struct. |

##### Returns

> [`I18nDrawings`](/v1/api-reference/constructors#i18ndrawings) or `Void` (if the drawing preset is not found)

##### Examples

::code-group
```js [Create Event]
// add some drawing presets
i18n_add_drawings(["en", "id"], ["header", "body"], [
    new I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1),
    new I18nDrawings(fnNotoSans, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, -1, 700)
]);

i18n_add_drawings("ja", ["header", "body"], [
    new I18nDrawings(global.font_ja, fa_left, fa_middle, #FFFFFF, 1, 0, 1),
    new I18nDrawings(global.font_ja, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, -1, 700)
]);
```

```js [Draw/Draw GUI Event]
// use the "header" drawing preset from "en" locale
i18n_use_drawing("header", "en");

// use the "body" drawing preset from "id" locale
i18n_use_drawing("body", "id");

// use the "header" drawing preset from "ja" locale
i18n_use_drawing("header", "ja");

// use the "body" drawing preset for dynamic locale
i18n_use_drawing("body");
```
::

---

## Direct Drawing

After you creating the drawing presets, you can use it to draw the translated text. There are two ways to do it:

1. Using the [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function. You'll get some benefit from using this function.
2. Using the [`i18n_use_drawing()`](/v1/api-reference/functions/i18n-use-drawing) function to change the drawing configuration, and then use the `draw_text_*` or [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) functions.

**What's make the [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function different from the `draw_text_*` functions?**

1. Built-in support for the message key. You can pass the `message key` directly to the function, and it will automatically lookup the message from the locale data, making it a dynamic message without creating any message reference.
2. Built-in support for the drawing presets. You can easily change the `font`, `color`, `alignment`, etc. by just passing the preset name to the function. See the [Drawing Presets](/v1/usage/drawing#drawing-presets) section for more information.
3. Built-in support for the message interpolation and pluralization. Just pass the `data` to the function, and the function will handle the rest. See the [Interpolation](/v1/usage/interpolation) section for more information.

### Functions

#### i18n_draw_message

##### Syntax

```js
i18n_draw_message(x, y, text, [data], [preset_name], [locale], [i18n]);
```

##### Description

> Draw a normal text or a translated text using the specified drawing preset.

##### Parameters

| Name        | Type              | Default      | Description |
|-------------|-------------------|--------------|-------------|
| x           | Real              |              | The `x` position to draw the text. |
| y           | Real              |              | The `y` position to draw the text. |
| text        | String            |              | The text to draw. You can pass a normal text, or a message key (start with `@:`) to draw a translated text. |
| data        | Integer \| Any\[] | `undefined`  | The data to pass to the message [pluralization](/v1/usage/pluralization) (`Integer`) or [indexed interpolation](/v1/usage/interpolation) (`Any[]`). |
| preset_name | String            | `""`         | The name of the drawing preset to use. Leave it empty to mark it as `dynamic` preset. |
| locale      | String            | `""`         | The locale code to use the drawing preset (and message key if the `text` parameter is a message key). Leave it empty if you don't want to use any drawing preset, or you want the message key to be static. |
| i18n        | Boolean \| I18n | `false`      | The [`I18n`](/v1/api-reference/functions/i18n-create) struct reference, or leave it empty to use the `global` i18n struct. |

##### Returns

> `Void`

##### Examples

::code-group
```js [Create Event]
// assume the system is initialized on global variable
my_msg = i18n_create_ref_message("my_msg", "hello");

// pluralization
plural_index = 1;

// indexed interpolation
player_name = "John";
intp_data = ["GM-I18n", player_name];
apple = {
    cost : 999999,
    resc : "copper coins"
};

// add some drawing presets
i18n_add_drawings(["en", "id"], ["title", "header", "body"], [
    new I18nDrawings(fnNotoSans, fa_center, fa_middle, #FFFFFF, 1.2, 0, 1),
    new I18nDrawings(fnNotoSans, fa_left, fa_middle, #FFFFFF, 1, 0, 1),
    new I18nDrawings(fnNotoSans, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, -1, 700)
]);

i18n_add_drawings("ja", ["title", "header", "body"], [
    new I18nDrawings(global.font_ja, fa_center, fa_middle, #FFFFFF, 1.2, 0, 1),
    new I18nDrawings(global.font_ja, fa_left, fa_middle, #FFFFFF, 1, 0, 1),
    new I18nDrawings(global.font_ja, fa_left, fa_top, #CCCCCC, 0.8, 0, 1, -1, 700)
]);
```

```js [Draw/Draw GUI Event]
// use the "header" drawing preset from "en" locale
i18n_use_drawing("header", "en");

// and then draw the message
i18n_draw_message(100, 50, "@:hello");          // dynamic message based on "hello" key message
draw_text(100, 50, "Hello, GM-I18n User!");     // static text, the drawing preset still applied

// use `draw_set_*` function if you want
draw_set_font(fnNotoSansBold);              // this font is static
draw_set_halign(fa_right);
draw_set_valign(fa_bottom);
draw_set_color(c_red);
draw_set_alpha(0.5);
i18n_draw_message(100, 50, "@:bye");        // dynamic message based on "bye" key message, but with custom drawing configuration

// this one is also a dynamic message using dynamic font
draw_set_font(i18n_get_drawings_data("header", I18N_DRAWING.FONT));     // this font is dynamic, so it will be changed when the locale is changed
draw_text(100, 50, my_msg);

// draw a dynamic message ("hello" key message) using dynamic "header" drawing preset
i18n_draw_message(100, 50, "@:hello", , "header");

// draw a dynamic message ("bye" key message) using "body" drawing preset on "en" locale
i18n_draw_message(100, 50, "@:bye", , "body", "en");

// draw a static text using the latest drawing preset ("body")
i18n_draw_message(100, 50, "This is a static text");

// draw a static message ("hello" key message) using "title" drawing preset on "ja" locale
i18n_draw_message(100, 50, "@:hello", , "title", "ja");

// draw a static message ("selection" key message) using the latest drawing preset on "id" with static pluralization
i18n_draw_message(100, 50, "@:selection", 0, , "id");

// draw a dynamic message ("selection" key message) using "header" drawing preset with dynamic pluralization based on the `plural_index` value
// bad practice, because the the latest `i18n_draw_message()` function already change the drawing preset to "title"
i18n_draw_message(100, 50, "@:selection", plural_index, "title");

// draw a dynamic message ("welcome" key message) using "body" drawing preset with indexed interpolation based on the `intp_data` value
i18n_draw_message(100, 50, "@:welcome", intp_data, "body");

// draw a static message ("welcome" key message) using the latest drawing preset on "en" with indexed interpolation
i18n_draw_message(100, 50, "@:welcome", [
    "GM-I18n", "Bro"
], , "en");

// draw a dynamic message ("dialog.npc_1" key message) using "header" drawing preset with indexed interpolation
i18n_draw_message(100, 50, "@:dialog.npc_1", [
    apple.cost, apple.resc
], "header");
```

```json [en.json]
{
    "hello": "Hello World!",
    "bye": "Bye World!",
    "selection": "No | Yes",
    "welcome": "Welcome to {0}, {1}!",
    "dialog": {
        "npc_1": "This \"Bad Apple\" is cost {0} {1}!"
    }
}
```

```json [id.json]
{
    "hello": "Halo Dunia!",
    "bye": "Sampai jumpa Dunia!",
    "selection": "Tidak | Ya",
    "welcome": "Selamat datang di {0}, {1}!",
    "dialog": {
        "npc_1": "\"Bad Apple\" ini harganya {0} {1}!"
    }
}
```

```json [ja.json]
{
    "hello": "こんにちは世界！",
    "bye": "さようなら世界！",
    "selection": "いいえ | はい",
    "welcome": "{1}、{0}へようこそ！",
    "dialog": {
        "npc_1": "この\"Bad Apple\"は{0} {1}です！"
    }
}
```
::

---

::alert{type="info"}
Currently, the [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function is the only way to directly draw the translated text in GM-I18n. <br> <br>

You can optimize the drawing process by using the drawing presets and templates. See the [Drawing Templates](/v1/advanced/optimizations#drawing-templates) section for more information.
::

::alert{type="warning"}
Though it's really convenient, you shouldn't use [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function too much if you want to optimize the performance. <br> <br>

The [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function is not suitable for complex text drawing. For example, you can't use it to draw a text with multiple font size, color, or alignment in a single line. <br> <br>

Don't pass the same `preset_name` to the [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function in sequential calls. It will call a redundant [`i18n_use_drawing()`](/v1/api-reference/functions/i18n-use-drawing) function, which is not efficient. <br> <br>

You can't use named data interpolation with the [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) function. You need to use the [`i18n_get_messages()`](/v1/api-reference/functions/i18n-get-messages) or [`i18n_get_ref_message()`](/v1/api-reference/functions/i18n-get-ref-message) function to get the message first, and then pass the message to the [`i18n_draw_message()`](/v1/api-reference/functions/i18n-draw-message) or `draw_text_*` function.
::

::alert{type="success"}
:icon{name="material-symbols:award-star-outline-rounded"} &nbsp; With this section, you can draw translated texts with **consistent** style in your game!
::
